text commit - added textfield

--- a/src/com/britzpetermann/phadpad/example/PhadPad1.mxml
+++ b/src/com/britzpetermann/phadpad/example/PhadPad1.mxml
@@ -4,4 +4,6 @@
 	xmlns:s="library://ns.adobe.com/flex/spark"
 	xmlns:mx="library://ns.adobe.com/flex/mx">
 
+	<s:TextInput/>
+	
 </s:WindowedApplication>
