--- a/src/com/britzpetermann/phadpad/example/PhadPad1.mxml
+++ b/src/com/britzpetermann/phadpad/example/PhadPad1.mxml
@@ -3,5 +3,5 @@
 	xmlns:fx="http://ns.adobe.com/mxml/2009"
 	xmlns:s="library://ns.adobe.com/flex/spark"
 	xmlns:mx="library://ns.adobe.com/flex/mx">
-
+	<mx:Button label="Blub"/>
 </s:WindowedApplication>
