--- a/src_example/example1/AccelerationSlider.mxml
+++ b/src_example/example1/AccelerationSlider.mxml
@@ -7,7 +7,10 @@
 	<fx:Script>
 		<![CDATA[
 			[Bindable]
-			public var acceleration : *;
+			public var acceleration : Number;
+			
+			[Bindable]
+			public var text : String;
 		]]>
 	</fx:Script>
 
@@ -20,6 +23,6 @@
 		id="sliderX"/>
 
 	<s:Label
-		text="Acceleration X: {acceleration}"/>
+		text="Acceleration {text}: {acceleration}"/>
 
 </s:HGroup>
